# robio_2021_dexopt

./: README.md
dexopt/: CMakeLists.txt  package.xml
dexopt/launch/: load_model.launch
dexopt/models/: cube01.dae  cube03.dae  cylinder02.dae  cylinder02.stl  hand8.srdf  hand8.xacro  handarm02.xacro  handarm03.srdf  simple_box.xacro
dexopt/src/: collision.h  common.h  dexenv.h  dexenv_grasp.h  dexenv_push.h  dexenv_turn.h  dexlearn.h  dexopt.cpp  dexviz.h  goals.h  neural.h  ops.cpp  ops.h  physics2.h  physics5.h  tensor.h
scripts/: loss.py  plot.py  plot.sh
tractor/: CMakeLists.txt  package.xml
tractor/include/tractor/: tractor.h
tractor/include/tractor/collision/: link.h  query.h  robot.h  shape.h
tractor/include/tractor/core/: allocator.h  array.h  batch.h  buffer.h  constraints.h  eigen.h  engine.h  gradients.h  linesearch.h  operator.h  ops.h  profiler.h  program.h  recorder.h  solver.h  type.h  var.h
tractor/include/tractor/engines/: base.h  jit.h  loop.h  simple.h  test.h
tractor/include/tractor/geometry/: eigen.h  fast.h  matrix3.h  ops.h  plane.h  pose.h  quaternion.h  twist.h  types.h  vector3.h
tractor/include/tractor/robot/: goals.h  jointstate.h  jointtypes.h  linkstate.h  robot.h  robotinfo.h  robotmodel.h  robotstate.h  trajectory.h
tractor/include/tractor/solvers/: base.h  ec.h  gd.h  ip.h  pgd.h  ps.h  sq.h
tractor/include/tractor/test/: test.h
tractor/src/: tractor.cpp
tractor/src/collision/: link.cpp  query.cpp  robot.cpp  shape.cpp
tractor/src/core/: allocator.cpp  array.cpp  batch.cpp  buffer.cpp  constraints.cpp  eigen.cpp  engine.cpp  gradients.cpp  linesearch.cpp  operator.cpp  ops.cpp  profiler.cpp  program.cpp  recorder.cpp  solver.cpp  type.cpp  var.cpp
tractor/src/engines/: base.cpp  jit.cpp  loop.cpp  simple.cpp  test.cpp
tractor/src/geometry/: eigen.cpp  fast.cpp  matrix3.cpp  ops.cpp  plane.cpp  pose.cpp  quaternion.cpp  twist.cpp  types.cpp  vector3.cpp
tractor/src/robot/: goals.cpp  jointstate.cpp  jointtypes.cpp  linkstate.cpp  robot.cpp  robotinfo.cpp  robotmodel.cpp  robotstate.cpp  trajectory.cpp
tractor/src/solvers/: base.cpp  ec.cpp  gd.cpp  ip.cpp  pgd.cpp  ps.cpp  sq.cpp
tractor/src/test/: test.cpp
visualization/: dexopt.tmv
