<?xml version="1.0"?>
<package>
    
    <name>dexopt</name>
    <version>0.0.0</version>
    <description>-</description>

    <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <license>-</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tractor</build_depend>
    <run_depend>tractor</run_depend>
    
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>moveit_ros_planning</build_depend>
    <run_depend>moveit_ros_planning</run_depend>
    
    <build_depend>tf</build_depend>
    <run_depend>tf</run_depend>
    
    <build_depend>tf_conversions</build_depend>
    <run_depend>tf_conversions</run_depend>
    
    <build_depend>tractor_ik</build_depend>
    <run_depend>tractor_ik</run_depend>

    <build_depend>interactive_markers</build_depend>
    <run_depend>interactive_markers</run_depend>
    
    <build_depend>moveit_ros_robot_interaction</build_depend>
    <run_depend>moveit_ros_robot_interaction</run_depend>
    
    <build_depend>kdl_parser</build_depend>
    <run_depend>kdl_parser</run_depend>

    <export>
    </export>

</package>
